2007-12-03  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Rename --disable-doc to --disable-doc-utils to be 
	clearer, and move the check lower in configure.ac because it was 
	somehow causing the check for pkg-config to fail. 

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* Makefile.am: Added --disable-doc configure option, because 
	Maemo has no gnome-doc-utils. This was copied partly from Ekiga.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am:  Mention dragbar.h to fix the 
	dist.
	* icons/16x16/Makefile.am: Dist pixmaps_DATA.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am: Mention dragbar.h to fix the 
	dist.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Remove dialog_connection_error.
	* glom/application.cc:
	* glom/frame_glom.cc:
	* glom/frame_glom.h: Replace use of dialog_connection_error 
	with Utils::show_ok_dialog(), so we can use a Hildon::Note 
	on Maemo.

2007-12-01  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/appstate.cc: Constructor: Make sure that we 
	default to operator mode for client-only mode.
	* glom/glom.glade:
	* glom/frame_glom.cc:
	* glom/frame_glom.h: Hide the footer (user level and found count)
	in Maemo build.

	* glom/dialog_glom.cc:
	* glom/mode_find/box_data_list_find.cc:
	* glom/utility_widgets/flowtablewithfields.cc: Replace some padding 
	and spacing with the constants, so we save space in the Mameo build.

2007-12-01  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Check for glibmm 2.14.1, because only a libgdamm built with 
	that can create the iter-only treemodel.

2007-11-29  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Use epc_shell_set_progress_hooks() 
	to show some UI while generating certificates during a first run.

2007-11-28  Murray Cumming  <murrayc@murrayc.com>
